@@ -51,6 +51,9 @@ JAVA_OPTS="-Xms128m -Xmx1024m -Dsoapui.properties=soapui.properties -Dgroovy.sou
 #CVE-2021-44228
 JAVA_OPTS="$JAVA_OPTS -Dlog4j2.formatMsgNoLookups=true"
 
+#JAVA 16
+JAVA_OPTS="$JAVA_OPTS --illegal-access=permit"
+
 if [ $SOAPUI_HOME != "" ] 
 then
     JAVA_OPTS="$JAVA_OPTS -Dsoapui.ext.libraries=$SOAPUI_HOME/bin/ext"
