@@ -85,6 +85,7 @@
                         <!-- run tests with home set to folder test-classes inside target to isolate tests from whatever user is executing the build. -->
                         <user.home>target/test-classes</user.home>
                     </systemProperties>
+                    <argLine>--illegal-access=permit</argLine>
                 </configuration>
             </plugin>
 
@@ -111,13 +112,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.8.5</version>
+            <version>${mockito-all.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest-all.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -142,7 +143,7 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jsr173_api</artifactId>
-            <version>1.0</version>
+            <version>${jsr173_api.version}</version>
         </dependency>
 
         <!-- Static analytics -->
@@ -150,13 +151,13 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
-            <version>2.0.0</version>
+            <version>${com.google.code.findbugs.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
-            <version>2.0.0</version>
+            <version>${com.google.code.findbugs.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -165,24 +166,23 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>14.0</version>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
-            <version>3.2.2</version>
+            <version>${commons-collections.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>2.4</version>
+            <version>${commons-lang.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>${commons-io.version}</version>
         </dependency>
-
 
         <!-- Logging -->
 
@@ -220,22 +220,22 @@
         <dependency>
             <groupId>com.jgoodies</groupId>
             <artifactId>forms</artifactId>
-            <version>1.0.7</version>
+            <version>${jgoodies-forms.version}</version>
         </dependency>
         <dependency>
             <groupId>com.jgoodies</groupId>
             <artifactId>looks</artifactId>
-            <version>2.2.0</version>
+            <version>${jgoodies-looks.version}</version>
         </dependency>
         <dependency>
             <groupId>com.jgoodies</groupId>
             <artifactId>binding</artifactId>
-            <version>2.0.1</version>
+            <version>${jgoodies-binding.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fifesoft</groupId>
             <artifactId>rsyntaxtextarea</artifactId>
-            <version>2.5.0</version>
+            <version>${rsyntaxtextarea.version}</version>
         </dependency>
 
         <!--JavaFX-->
@@ -359,17 +359,17 @@
         <dependency>
             <groupId>jetty</groupId>
             <artifactId>jetty</artifactId>
-            <version>6.1.26</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>jetty</groupId>
             <artifactId>jetty-util</artifactId>
-            <version>6.1.26</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>jetty</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5-20081211</version>
+            <version>${jetty-servlet-api.version}</version>
         </dependency>
 
 
@@ -378,7 +378,7 @@
         <dependency>
             <groupId>org.apache.ws.security</groupId>
             <artifactId>wss4j</artifactId>
-            <version>1.6.17</version>
+            <version>${wss4j.version}</version>
         </dependency>
 
         <!-- HtmlUnit dependencies -->
@@ -386,7 +386,7 @@
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit</artifactId>
-            <version>2.7</version>
+            <version>${htmlunit.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>xercesImpl</artifactId>
@@ -397,12 +397,12 @@
         <dependency>
             <groupId>org.w3c.css</groupId>
             <artifactId>sac</artifactId>
-            <version>1.3</version>
+            <version>${sac.version}</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit-core-js</artifactId>
-            <version>2.7</version>
+            <version>${htmlunit.version}</version>
         </dependency>
 
         <!-- HTTP Components -->
@@ -410,31 +410,31 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.5</version>
+            <version>${httpcomponents.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
-            <version>4.5.5</version>
+            <version>${httpcomponents.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient-cache</artifactId>
-            <version>4.5.5</version>
+            <version>${httpcomponents.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
-            <version>4.4.9</version>
+            <version>${httpcore.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore-nio</artifactId>
-            <version>4.4.9</version>
+            <version>${httpcore.version}</version>
             <type>jar</type>
         </dependency>
 
@@ -442,40 +442,38 @@
         <dependency>
             <groupId>org.apache.oltu.oauth2</groupId>
             <artifactId>org.apache.oltu.oauth2.client</artifactId>
-            <version>0.31</version>
+            <version>${org.apache.oltu.oauth2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.oltu.oauth2</groupId>
             <artifactId>org.apache.oltu.oauth2.httpclient4</artifactId>
-            <version>0.31</version>
+            <version>${org.apache.oltu.oauth2.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.oauth-client</groupId>
             <artifactId>google-oauth-client</artifactId>
-            <version>1.21.0</version>
+            <version>${google-oauth-client.version}</version>
         </dependency>
-
-        <!--              -->
 
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>2.0</version>
+            <version>${maven-plugin-api.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
-            <version>1.1</version>
+            <version>${javax.activation.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
-            <version>1.4</version>
+            <version>${javax.mail.version}</version>
         </dependency>
         <dependency>
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
-            <version>1.6.2-fixed</version>
+            <version>${wsdl4j.version}</version>
         </dependency>
         <dependency>
             <groupId>com.narupley</groupId>
@@ -495,7 +493,7 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
+            <version>${commons-cli.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -505,7 +503,7 @@
         <dependency>
             <groupId>json</groupId>
             <artifactId>json-lib</artifactId>
-            <version>2.2.2-jdk15</version>
+            <version>${json-lib.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -525,12 +523,12 @@
         <dependency>
             <groupId>ezmorph</groupId>
             <artifactId>ezmorph</artifactId>
-            <version>1.0.5</version>
+            <version>${ezmorph.version}</version>
         </dependency>
         <dependency>
             <groupId>xom</groupId>
             <artifactId>xom</artifactId>
-            <version>1.1</version>
+            <version>${xom.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>xercesImpl</artifactId>
@@ -546,7 +544,7 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.10</version> <!--HttpClient with version 4.5.5 and higher needs minimum 1.10 version-->
+            <version>${commons-codec.version}</version> <!--HttpClient with version 4.5.5 and higher needs minimum 1.10 version-->
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -562,22 +560,22 @@
         <dependency>
             <groupId>rhino</groupId>
             <artifactId>js</artifactId>
-            <version>1.7R2</version>
+            <version>${rhino-js.version}</version>
         </dependency>
         <dependency>
             <groupId>saxon</groupId>
             <artifactId>saxon</artifactId>
-            <version>9.1.0.8j</version>
+            <version>${saxon.version}</version>
         </dependency>
         <dependency>
             <groupId>saxon</groupId>
             <artifactId>saxon-dom</artifactId>
-            <version>9.1.0.8j</version>
+            <version>${saxon.version}</version>
         </dependency>
         <dependency>
             <groupId>xmlunit</groupId>
             <artifactId>xmlunit</artifactId>
-            <version>1.2</version>
+            <version>${xmlunit.version}</version>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
@@ -597,37 +595,37 @@
         <dependency>
             <groupId>javax.jms</groupId>
             <artifactId>jms</artifactId>
-            <version>1.1</version>
+            <version>${javax.jms.version}</version>
         </dependency>
         <dependency>
             <groupId>hermesjms</groupId>
             <artifactId>hermes</artifactId>
-            <version>1.14</version>
+            <version>${hermes.version}</version>
         </dependency>
         <dependency>
             <groupId>amf</groupId>
             <artifactId>flex-messaging-common</artifactId>
-            <version>1.0</version>
+            <version>${amf.version}</version>
         </dependency>
         <dependency>
             <groupId>amf</groupId>
             <artifactId>flex-messaging-core</artifactId>
-            <version>1.0</version>
+            <version>${amf.version}</version>
         </dependency>
         <dependency>
             <groupId>amf</groupId>
             <artifactId>flex-messaging-opt</artifactId>
-            <version>1.0</version>
+            <version>${amf.version}</version>
         </dependency>
         <dependency>
             <groupId>amf</groupId>
             <artifactId>flex-messaging-proxy</artifactId>
-            <version>1.0</version>
+            <version>${amf.version}</version>
         </dependency>
         <dependency>
             <groupId>amf</groupId>
             <artifactId>flex-messaging-remoting</artifactId>
-            <version>1.0</version>
+            <version>${amf.version}</version>
         </dependency>
         <dependency>
             <groupId>thoughtworks</groupId>
@@ -637,12 +635,12 @@
         <dependency>
             <groupId>net.sourceforge.cssparser</groupId>
             <artifactId>cssparser</artifactId>
-            <version>0.9.5</version>
+            <version>${cssparser.version}</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
             <artifactId>nekohtml</artifactId>
-            <version>1.9.14</version>
+            <version>${nekohtml.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>xercesImpl</artifactId>
@@ -665,29 +663,29 @@
         <dependency>
             <groupId>org.samba.jcifs</groupId>
             <artifactId>jcifs</artifactId>
-            <version>1.2.9</version>
+            <version>${jcifs.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>l2fprod</groupId>
             <artifactId>l2fprod-common-directorychooser
             </artifactId>
-            <version>7.3</version>
+            <version>${l2fprod.version}</version>
         </dependency>
         <dependency>
             <groupId>l2fprod</groupId>
             <artifactId>l2fprod-common-fontchooser</artifactId>
-            <version>7.3</version>
+            <version>${l2fprod.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.santuario</groupId>
             <artifactId>xmlsec</artifactId>
-            <version>2.1.7</version>
+            <version>${xmlsec.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.xerces</groupId>
             <artifactId>xml-apis</artifactId>
-            <version>2.9.1</version>
+            <version>${xml-apis.version}</version>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
@@ -698,17 +696,17 @@
         <dependency>
             <groupId>org.apache.ws.commons.util</groupId>
             <artifactId>ws-commons-util</artifactId>
-            <version>1.0.2</version>
+            <version>${ws-commons-util.version}</version>
         </dependency>
         <dependency>
             <groupId>com.btr</groupId>
             <artifactId>proxy-vole</artifactId>
-            <version>20131209</version>
+            <version>${proxy-vole.version}</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>0.9.1</version>
+            <version>${json-path.version}</version>
         </dependency>
 
         <!--  old http client needed by some 3rd party components -->
@@ -716,20 +714,20 @@
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <version>${commons-httpclient.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.sonatype.install4j</groupId>
             <artifactId>i4jruntime</artifactId>
-            <version>5.1.14</version>
+            <version>${i4jruntime.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>animal-sniffer-annotations</artifactId>
-            <version>1.11</version>
+            <version>${animal-sniffer-annotations.version}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -742,7 +740,7 @@
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.9-RC1</version>
+            <version>${reflections.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.miglayout/miglayout-swing -->
